Fixed responsive layout issues. Condensed/refactored code to provide better readability.

--- a/src/applications/combined-debt-portal/combined/sass/combined-debt-portal.scss
+++ b/src/applications/combined-debt-portal/combined/sass/combined-debt-portal.scss
@@ -56,7 +56,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 270px;
+    @media (min-width: $small-screen) {
+      width: 270px;
+    }
 }
 
 .account-parts-container {
